# s3_web

./: .gitignore  Cargo.toml  README.md
docs/: app.md  auth.md  aws-credentials.md
src/: db.rs  lib.rs  main.rs
src/models/: mod.rs  users.rs
src/routes/: auth.rs  mod.rs  s3.rs
templates/: base.html
templates/s3/: home.html  list_objects.html
templates/user_management/: login.html
